// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpensesListFilter 1`] = `
<div>
  <input
    onChange={[Function]}
    type="text"
    value=""
  />
  <select
    onChange={[Function]}
    value="date"
  >
    <option
      value="date"
    >
      Date
    </option>
    <option
      value="amount"
    >
      Amount
    </option>
  </select>
</div>
`;

exports[`should render ExpensesListFilter with different filters 1`] = `
<div>
  <input
    onChange={[Function]}
    type="text"
    value="rent"
  />
  <select
    onChange={[Function]}
    value="amout"
  >
    <option
      value="date"
    >
      Date
    </option>
    <option
      value="amount"
    >
      Amount
    </option>
  </select>
</div>
`;
